load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "osimage",
    srcs = ["osimage.go"],
    importpath = "github.com/konvera/geth-sev/constellation/osimage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api/versionsapi",
        "//internal/cloud/cloudprovider",
    ],
)
