load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "instancetypes",
    srcs = [
        "aws.go",
        "azure.go",
        "gcp.go",
        "stackit.go",
    ],
    importpath = "github.com/konvera/geth-sev/constellation/config/instancetypes",
    visibility = ["//:__subpackages__"],
)
