load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testdata",
    srcs = ["testdata.go"],
    embedsrcs = [
        "certchain.pem",
        "vlek.pem",
        "report.txt",
    ],
    importpath = "github.com/konvera/geth-sev/constellation/attestation/aws/snp/testdata",
    visibility = ["//:__subpackages__"],
)
